# itc2007-cct

./: .gitignore  CMakeLists.txt  README.MD  benchmark.py  build-debug.sh  build.sh  race.py  sa-test.py  stats.py
benchmarks/168/hc/: comp02.out  comp03.out  comp04.out  comp05.out  comp06.out
benchmarks/168/hcsa/: comp01.out  comp02.out  comp03.out  comp04.out  comp05.out  comp06.out  comp07.out
benchmarks/168/ls/: comp01.out  comp02.out  comp03.out  comp04.out  comp05.out  comp06.out  comp07.out
benchmarks/168/sa/: comp01.out  comp02.out  comp03.out  comp04.out  comp05.out  comp06.out  comp07.out
benchmarks/168/sa1/: comp01.out  comp02.out  comp03.out  comp04.out  comp05.out  comp06.out  comp07.out
benchmarks/168/sa2/: comp01.out  comp02.out  comp03.out  comp04.out  comp05.out  comp06.out
benchmarks/168/sa3/: comp01.out  comp02.out  comp03.out  comp04.out  comp05.out  comp06.out  comp07.out
benchmarks/168/sals/: comp01-2.out  comp01.out  comp02-2.out  comp02.out  comp03.out  comp04.out  comp05.out  comp06.out  comp07.out
benchmarks/168/sals0/: comp01.out  comp02.out  comp03.out  comp04.out  comp05.out  comp06.out  comp07-2.out  comp07.out
benchmarks/168/ts/: comp01.out  comp02.out  comp03.out  comp04.out  comp05.out  comp06.out  comp07.out
benchmarks/hc/: comp01.out  comp02.out  comp03.out  comp04.out  comp05.out  comp06.out  comp07.out
benchmarks/ls/: comp01.out  comp02.out  comp03.out  comp04.out  comp05.out  comp06.out  comp07.out
benchmarks/old/: comp01.out  comp03.out  comp05.out
configs/: default.conf  hc.conf  hcsa.conf  ls.conf  sa.conf  ts.conf  tshc.conf
datasets/: toy.ctt
devtests/: main.c
docs/latex/: itc2007.bib  itc2007.tex
results/races/: comp01.ctt.sol  comp02.ctt.sol  comp03.ctt.sol  comp04.ctt.sol  comp05.ctt.sol  comp06.ctt.sol  comp07.ctt.sol
solutions/: toy.ctt.sol
src/: args.c  args.h  array_utils.h  config.h  debug.h  def_utils.h  exact_solver.c  exact_solver.h  feasible_solution_finder.c  feasible_solution_finder.h  io_utils.c  local_search_solver.c  local_search_solver.h  main.c  mem_utils.c  mem_utils.h  model.c  model.h  model_parser.c  model_parser.h  neighbourhood.c  neighbourhood.h  os_utils.c  os_utils.h  parser.c  parser.h  renderer.c  renderer.h  resolution_method.c  resolution_method.h  solution.c  solution.h  str_utils.c  str_utils.h  tabu_search_solver.c  tabu_search_solver.h  utils.c  utils.h  verbose.c  verbose.h
src/args/: args.c  args.h  args_parser.c  args_parser.h
src/config/: config.c  config.h  config_parser.c  config_parser.h
src/exact/: solver.c  solver.h
src/finder/: feasible_solution_finder.c  feasible_solution_finder.h
src/heuristics/: heuristic_solver.c  heuristic_solver.h
src/heuristics/methods/: deep_local_search.c  deep_local_search.h  heuristic_method.c  heuristic_method.h  hill_climbing.c  hill_climbing.h  local_search.c  local_search.h  simulated_annealing.c  simulated_annealing.h  tabu_search.c  tabu_search.h
src/heuristics/neighbourhoods/: neighbourhood.h  neighbourhood_swap.c  (+4 more)
src/log/: debug.c  debug.h  verbose.c  verbose.h
src/model/: model.c  model.h  model_parser.c  model_parser.h
src/neighbourhoods/: neighbourhood.h  neighbourhood_stabilize_room.c  neighbourhood_stabilize_room.h  neighbourhood_swap.c  neighbourhood_swap.h
src/renderer/: renderer.c  renderer.h
src/solution/: solution.c  solution.h  solution_parser.c  solution_parser.h
src/solvers/: exact_solver.c  exact_solver.h  hill_climbing_solver.c  hill_climbing_solver.h  hybrid_solver.c  hybrid_solver.h  iterated_local_search_solver.c  iterated_local_search_solver.h  local_search_solver.c  local_search_solver.h  simulated_annealing_solver.c  simulated_annealing_solver.h  tabu_search_solver.c
src/timeout/: timeout.c  timeout.h
src/utils/: array_utils.h  assert_utils.c  assert_utils.h  common_utils.c  common_utils.h  def_utils.h  io_utils.c  io_utils.h  math_utils.c  math_utils.h  mem_utils.c  mem_utils.h  os_utils.c  os_utils.h  rand_utils.c  rand_utils.h  random_utils.c  random_utils.h  str_utils.c  str_utils.h  time_utils.c  time_utils.h
tests/: main.c  tests.c
tests/solutions/: comp01.ctt.sol  comp01.ctt.sol.463  comp01.ctt.sol.57  toy.ctt.sol  toytoy.ctt.sol.39
validator/: main.cpp
(+23 files in other folders)
